base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx  
  tls:
    - hosts:
        - hello-risf.local.domain
      secretName: risf-tls
    - hosts:
        - hello-itsf.local.domain
      secretName: itsf-tls
  rules:
    - host: hello-risf.local.domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-risf
                port:
                  number: 8080
    - host: hello-itsf.local.domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-itsf
                port:
                  number: 8080
